--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1228,7 +1228,7 @@ li:hover > a {
 #hero .position {
   font-size: 16px;
   letter-spacing: 0px;
-  font-weight: 500;
+  font-weight: bold;
   color:teal;
 }
 
@@ -1236,7 +1236,7 @@ li:hover > a {
   content : " |  ";
   padding-left: 4px;
   padding-right: 4px;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
 }
 
@@ -2964,7 +2964,7 @@ section {
 -------------------------------------------------------------------*/
 .experience .experience-item {
   margin: 0 0 24px 0;
-  padding: 0 0 36px 0;
+  padding: 0 0 12px 0;
   border-bottom: 1px solid #adb5bd29;
 }
 
